@@ -1,3 +1,8 @@
+Mon Apr 21 18:55:21 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* ext/-test-/string/coderange.c: add Bug::String.new#coderange_scan
+	  to explicitly scan coderange.
+
 Mon Apr 21 18:19:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* string.c (coderange_scan): remove unused logic.
